examples/test/testpolicy1781.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1781
  namespace: namespace47
spec:
  podSelector:
    matchLabels:
      key43: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value41
          key17: value4
          key18: value46
      podSelector:
        matchLabels:
          key16: value4
